# Plane-SLAM-for-Hand-Held-3D-Sensors

./: .gitignore  CMakeLists.txt  README.md  dataset_data.txt
include/: Plane.h  libraries_include.h  main.h
include/algorithms/: Clustering.h  PcaPlaneDetector.h  PlanePca.h  PlaneRansac.h  RansacPlaneDetector.h
include/clustering/: Cluster.h  ClusterPair.h  Distance.h  nanoflann.h
include/dataset/: Clustering.h  ImageLoader.h  ImagePair.h  PCA.h  Plane.h  PlanePca.h  PlaneRansac.h  Qvisualizer.h  constants.h  main.h
include/demoG2o/: main.h
include/kinect/: KinectFrames.h  KinectModule.h  Plane.h  libraries_include.h  main.h
include/models/: Cluster.h  HSVColor.h  ImageCoords.h  ImageLoader.h  ImagePair.h  Plane.h  PlaneDetector.h  PlaneFiller.h  PlaneSimilarity.h  Point3D.h  PointCloud.h  PosOrient.h
include/planeG2O/: GlobalG2oMap.h  GlobalMap.h  MatchPlanesG2o.h  PlaneG2oModule.h
include/utils/: HSVColor.h  ImageCoords.h  PlaneSimilarity.h  Qvisualizer.h  constants.h  planeUtils.h  utils.h
src/: Plane.cpp  main.cpp
src/algorithms/: Clustering.cpp  PcaPlaneDetector.cpp  PlanePca.cpp  PlaneRansac.cpp  RansacPlaneDetector.cpp
src/clustering/: Cluster.cpp  ClusterPair.cpp  Distance.cpp
src/dataset/: Cluster.cpp  Clustering.cpp  ImageLoader.cpp  ImagePair.cpp  PCA.cpp  Plane.cpp  PlanePca.cpp  PlaneRansac.cpp  Qvisualizer.cpp  main.cpp
src/demoG2o/: main.cpp
src/kinect/: KinectFrames.cpp  KinectModule.cpp  Plane.cpp  main.cpp
src/models/: Cluster.cpp  HSVColor.cpp  ImageCoords.cpp  ImageLoader.cpp  ImagePair.cpp  Plane.cpp  PlaneDetector.cpp  PlaneFiller.cpp  PlanePca.cpp  PlaneSimilarity.cpp  PointCloud.cpp  PosOrient.cpp
src/planeG2O/: GlobalG2oMap.cpp  GlobalMap.cpp  MatchPlanesG2o.cpp  PlaneG2oModule.cpp
src/utils/: HSVColor.cpp  ImageCoords.cpp  PlaneSimilarity.cpp  Qvisualizer.cpp  planeUtils.cpp  utils.cpp
