cmake_minimum_required(VERSION 3.5.1)
Project (ProjektMagisterski)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
SET(CMAKE_BUILD_TYPE Debug)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(freenect2 REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${freenect2_INCLUDE_DIRS})

file(GLOB MAIN_SOURCES
  "${CMAKE_SOURCE_DIR}/src/*.cpp"
)
file(GLOB MAIN_HEADERS
  "${CMAKE_SOURCE_DIR}/include/*.h"
)

ADD_EXECUTABLE(ProjektMagisterski ${MAIN_SOURCES} ${MAIN_HEADERS})
TARGET_LINK_LIBRARIES(ProjektMagisterski ${OpenCV_LIBRARIES} ${freenect2_LIBRARIES})
